--- a/ideasheet.html
+++ b/ideasheet.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 <html>
+        
+
 
 <head>
-  <title>Noah Rider!</title>
+  <title>Noah Rider Idea Sheet!</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,24 +15,51 @@
 
   <link rel="icon" href="content/NR!.png">
 
+  <SCRIPT language="JavaScript">
+  <!--hide
+  
+  var password;
+  
+  var pass1="ideasheet08";
+  
+  password=prompt('Please enter your password to view this page!',' ');
+  
+  if (password==pass1)
+    alert('Correct!');
+  else
+     {
+      window.location="index.html";
+      }
+  
+  //-->
+  </SCRIPT>
+
+
 </head>
 
 <body>
 
 
 
-  <h1>Noah Rider!</h1>
+  <h1>Noah Rider Idea Sheet!</h1>
   <hr>
-  <h2>About Me</h2>
+  <h2>Ideas</h2>
   </hr>
-  <p>Hey, I'm Noah! I'm that one nerd who likes coding and computers <i>way too much.</i></p>
-  <hr>
-  <h2>Interests</h2>
-  <p>Coding</p>
-  <p>Collecting Vintage Apple Items (See "<a class="nav-link" href="./vintageapplecollection.html">Vintage Apple
-      Collection</a>")</p>
-  <p>Minecraft</p>
-  <p>Portal</p>
+  <ui>
+<li>Dark Mode?</li>
+    <li>Connections with PlayPlaza</li>
+    <li>QnA</li>
+
+
+
+
+
+
+
+
+
+  </ui>
+
   <hr>
   <h1>Links</h1>
 <p><a class="nav-link" href="./index.html">Home</p>
