--- a/media.html
+++ b/media.html
@@ -3,39 +3,42 @@
 <html>
 
 <head>
-  <title>Noah Rider Media!</title>
+  <body onload="myFunction()" style="margin:0;">
 
+    <div id="loader"></div>
+    
+    <div style="display:none;" id="myDiv" class="animate-bottom">
+  <title>Noah Rider!</title>
+  <meta name=”description” content=”Noah Rider!”>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/style.css" />
-
+  <link rel="stylesheet" href="styles/loading.css" />
+  <script src="scripts/script.js"></script>
   <link rel="icon" href="content/NR!.png">
+  
 
 </head>
 
 <body>
 
 
+<header><h1>Noah Rider!</h1></header>
+<div class="navigate">
+  <h1>Navigate</h1>
+  <a href="index.html"><center><button class="button button3">Home</button></center></a>
+<a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
+</div>
 
-  <h1>Noah Rider Media!</h1>
-  <hr>
-  <h2>YouTube</h2>
-  </hr>
-<p>curl: Tech videos every week! (sometimes). <a class="nav-link" href="https://www.youtube.com/channel/UCjxcPJRP40DpaeacIGgRAlg">Click Here!</a></p>
-  <hr>
-  <h2>Twitch</h2>
-  <p>@curllive: Live video gameplay + tech! <a class="nav-link" href="https://www.twitch.tv/curllive">Click Here!</a></p>
-  <hr>
-  <h1>Links</h1>
-<p><a class="nav-link" href="./index.html">Home</p>
-  <p><a class="nav-link" href="./vintageapplecollection.html">Vintage Apple Collection</p>
-    <p><a class="nav-link" href="./media.html">Media</p>
-      <p><a class="nav-link" href="./vintageapplecollection.html"></a></p>
+<div class="media">
+  <h1>Media</h1>
+  <a href="https://www.youtube.com/channel/UCjxcPJRP40DpaeacIGgRAlg" target="_blank"><center><button class="button button3">YouTube</button></center></a>
+<a href="https://www.twitch.tv/curllive" target="_blank"><center><button class="button button3">Twitch</button></center></a>
+</div>
 
-
-
+</div>
 
 </body>
 
