--- a/media.html
+++ b/media.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-  <body onload="myFunction()" style="margin:0;">
-
-    <div id="loader"></div>
-    
-    <div style="display:none;" id="myDiv" class="animate-bottom">
+<html><head>
+  
   <title>Noah Rider!</title>
-  <meta name=”description” content=”Noah Rider!”>
+  <meta name="”description”" content="”Noah" rider!”="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&amp;display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="stylesheet" href="styles/loading.css" />
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/loading.css">
   <script src="scripts/script.js"></script>
-  <link rel="icon" href="content/NR!.png">
+  <link rel="icon" href="content/NR!.png" type="image/png" />
   
 
 </head>
@@ -29,7 +21,9 @@
 <div class="navigate">
   <h1>Navigate</h1>
   <a href="index.html"><center><button class="button button3">Home</button></center></a>
-<a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
+  <a href="about.html"><center><button class="button button3">About</button></center></a>
+  <a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
+  <a href="projects.html"><center><button class="button button3">Projects</button></center></a>
 </div>
 
 <div class="media">
@@ -38,9 +32,9 @@
 <a href="https://www.twitch.tv/curllive" target="_blank"><center><button class="button button3">Twitch</button></center></a>
 </div>
 
-</div>
-
-</body>
 
 
-</html>
+
+
+
+</body></html>
