--- a/vintageapplecollection.html
+++ b/vintageapplecollection.html
@@ -1,33 +1,31 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
+<html><head>
   <title>Noah Rider!</title>
-  <meta name=”description” content=”Noah Rider!”>
+  <meta name="”description”" content="”Noah" rider!”="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&amp;display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/script.js"></script>
-  <link rel="icon" href="content/NR!.png">
+  <link rel="icon" href="content/NR!.png" type="image/png" />
   
-  <body onload="myFunction()" style="margin:0;">
+  </head><body onload="myFunction()" style="margin:0;">
 
-    <div id="loader"></div>
+    <div id="loader" style="display: none;"></div>
     
-    <div style="display:none;" id="myDiv" class="animate-bottom">
-</head>
+    <div style="display: block;" id="myDiv" class="animate-bottom">
 
-<body>
+
+
 
 
 <header><h1>Noah Rider!</h1></header>
 <div class="navigate">
   <h1>Navigate</h1>
   <a href="index.html"><center><button class="button button3">Home</button></center></a>
-<a href="media.html"><center><button class="button button3">Media</button></center></a>
+  <a href="about.html"><center><button class="button button3">About</button></center></a>
+  <a href="media.html"><center><button class="button button3">Media</button></center></a>
+  <a href="projects.html"><center><button class="button button3">Projects</button></center></a>
 </div>
 
 
@@ -47,7 +45,7 @@
 
 <hr>
 
-<h2>iMacs</h2>
+<h2>Desktop</h2>
 
 <hr>
 
@@ -57,7 +55,7 @@
 
 </div>
 
-</body>
 
 
-</html>
+
+</body></html>
