--- a/media.html
+++ b/media.html
@@ -21,15 +21,16 @@
 <div class="navigate">
   <h1>Navigate</h1>
   <a href="index.html"><center><button class="button button3">Home</button></center></a>
-  <a href="about.html"><center><button class="button button3">About</button></center></a>
   <a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
   <a href="projects.html"><center><button class="button button3">Projects</button></center></a>
+  <a href="blog.html"><center><button class="button button3">Blog</button></center></a>
 </div>
 
 <div class="media">
   <h1>Media</h1>
   <a href="https://www.youtube.com/channel/UCjxcPJRP40DpaeacIGgRAlg" target="_blank"><center><button class="button button3">YouTube</button></center></a>
 <a href="https://www.twitch.tv/curllive" target="_blank"><center><button class="button button3">Twitch</button></center></a>
+
 </div>
 
 
