--- a/vintageapplecollection.html
+++ b/vintageapplecollection.html
@@ -23,9 +23,9 @@
 <div class="navigate">
   <h1>Navigate</h1>
   <a href="index.html"><center><button class="button button3">Home</button></center></a>
-  <a href="about.html"><center><button class="button button3">About</button></center></a>
   <a href="media.html"><center><button class="button button3">Media</button></center></a>
   <a href="projects.html"><center><button class="button button3">Projects</button></center></a>
+  <a href="blog.html"><center><button class="button button3">Blog</button></center></a>
 </div>
 
 
