--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
           <h1>Navigate</h1>
           <a href="index.html"><center><button class="button button3">Home</button></center></a>
             <a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
-            <a href="about.html"><center><button class="button button3">About</button></center></a>
             <a href="media.html"><center><button class="button button3">Media</button></center></a>
+            <a href="blog.html"><center><button class="button button3">Blog</button></center></a>
         
         
         </div>
