first blog post and dev tools v1

--- a/blog.html
+++ b/blog.html
@@ -41,9 +41,11 @@
 
 
 
-    <div class="wip">
+    <div class="blog">
 
-        <h1>This page is currently a Work In Progress. <a href="index.html">Go Home</a></h1>
+        <h1>Blog</h1>
+
+        <a href="blog/december/future-of-computing.html"><h2>My Thoughts of The Future of Computing</h2></a>
 
     </div>
       
