--- a/dev/f7e3e8af0149ba3128b31831c87ae2f0f45151c3/index.html
+++ b/dev/f7e3e8af0149ba3128b31831c87ae2f0f45151c3/index.html
@@ -3,12 +3,40 @@
     <head>
 
         <title>NRDEV</title>
+        
+        <meta name="”description”" content="”Noah" rider!”="">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&amp;display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="../../styles/dev.css">
+
 
     </head>
 
 <body>
 
 <header><h1>Noah Rider Developer Tools</h1></header>
+
+<h2>Welcome, Developer!</h2>
+
+<div class="links">
+
+    <h1>Links</h1>
+    <a href="../../blog/layout.html"><h2>Blog Layout</h2></a>
+
+
+</div>
+
+<div class="navigate">
+    <h1>Navigate</h1>
+    <a href="../../index.html"><center><button class="button button3">Home</button></center></a>
+    <a href="../../vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
+    <a href="../../media.html"><center><button class="button button3">Media</button></center></a>
+    <a href="../../projects.html"><center><button class="button button3">Projects</button></center></a>
+    <a href="../../blog.html"><center><button class="button button3">Blog</button></center></a>
+   
+</div>
 
 </body>
 
