--- a/dev/f7e3e8af0149ba3128b31831c87ae2f0f45151c3/index.html
+++ b/dev/f7e3e8af0149ba3128b31831c87ae2f0f45151c3/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&amp;display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="../../styles/dev.css">
-
+  <link rel="icon" href="../../content/NR!.png" type="image/png" />
 
     </head>
 
