--- a/dev/index.html
+++ b/dev/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
+<title>NR Dev Password</title>
+<link rel="icon" href="../content/NR!.png" type="image/png" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
