--- a/404.html
+++ b/404.html
@@ -32,6 +32,7 @@
 
       <div class="navigate">
         <h1>Navigate</h1>
+        <a href="index.html"><center><button class="button button3">Home</button></center></a>
         <a href="vintageapplecollection.html"><center><button class="button button3">Apple Collection</button></center></a>
         <a href="media.html"><center><button class="button button3">Media</button></center></a>
         <a href="projects.html"><center><button class="button button3">Projects</button></center></a>
